--- a/release/cloudbuild_ci.yaml
+++ b/release/cloudbuild_ci.yaml
@@ -71,6 +71,8 @@ steps:
           --firmware_file=output/trusted_os.elf \
           --firmware_type=TRUSTED_OS \
           --tamago_version=${_TAMAGO_VERSION} \
+          --build_env="BEE=${_BEE}" \
+          --build_env="DEBUG=${_DEBUG}" \
           --raw \
           --output_file=output/trusted_os_manifest_unsigned.json
   # Sign the log entry.
@@ -175,4 +177,6 @@ substitutions:
   _OS_PUBLIC_KEY2: transparency.dev-aw-os2-ci+af8e4114+AbBJk5MgxRB+68KhGojhUdSt1ts5GAdRIT1Eq9zEkgQh
   _BEE: '1'
   _DEBUG: '1'
+  _FAKE_RPMB: '1'
+  _FAKE_STORAGE: '0'
   _CHECKPOINT_CACHE: 'public, max-age=30'
