Commit to build envs in manifest for OS (#167)
Moved the instantiation of the fake implementation envs into the cloudbuild file instead of being hidden in docker. Without doing this, we can't commit to the same values that are passed to the Makefile.

--- a/release/cloudbuild_ci.yaml
+++ b/release/cloudbuild_ci.yaml
@@ -71,6 +71,8 @@ steps:
           --firmware_file=output/trusted_os.elf \
           --firmware_type=TRUSTED_OS \
           --tamago_version=${_TAMAGO_VERSION} \
+          --build_env="BEE=${_BEE}" \
+          --build_env="DEBUG=${_DEBUG}" \
           --raw \
           --output_file=output/trusted_os_manifest_unsigned.json
   # Sign the log entry.
