--- a/release/cloudbuild_ci.yaml
+++ b/release/cloudbuild_ci.yaml
@@ -136,7 +136,7 @@ steps:
           \"bucket\": \"${_LOG_NAME}\",
           \"kmsKeyName\": \"ft-log-ci\",
           \"kmsKeyRing\": \"firmware-release-ci\",
-          \"kmsKeyVersion\": '${_KEY_VERSION}',
+          \"kmsKeyVersion\": ${_KEY_VERSION},
           \"kmsKeyLocation\": \"global\",
           \"noteKeyName\": \"transparency.dev-aw-ftlog-ci-${_KEY_VERSION}\",
           \"checkpointCacheControl\": \"${_CHECKPOINT_CACHE}\"
@@ -154,7 +154,7 @@ steps:
           "bucket": "${_LOG_NAME}",
           "kmsKeyName": "ft-log-ci",
           "kmsKeyRing": "firmware-release-ci",
-          "kmsKeyVersion": '${_KEY_VERSION}',
+          "kmsKeyVersion": ${_KEY_VERSION},
           "kmsKeyLocation": "global",
           "noteKeyName": "transparency.dev-aw-ftlog-ci-${_KEY_VERSION}",
           "checkpointCacheControl": "${_CHECKPOINT_CACHE}"
