--- a/release/cloudbuild_presubmit.yaml
+++ b/release/cloudbuild_presubmit.yaml
@@ -81,14 +81,18 @@ steps:
       - cat
       - output/trusted_os_manifest_unsigned.json
 substitutions:
+  # Note that to be a valid CloudBuild config these MUST all be strings.
+  # Without explicit quotes, some things may be interpreted as other types since
+  # this is a YAML file, so to avoid future tears let's keep these all quoted.
+  #
   # Build-related.
-  _FIRMWARE_BUCKET: armored-witness-firmware-ci-1
+  _FIRMWARE_BUCKET: 'armored-witness-firmware-ci-1'
   _TAMAGO_VERSION: '1.21.5'
   # This must correspond with the trailing number on the _FIRMWARE_BUCKET, _ORIGIN values.
   _KEY_VERSION: '1'
-  _ORIGIN: transparency.dev/armored-witness/firmware_transparency/ci/1
-  _LOG_PUBLIC_KEY: transparency.dev-aw-ftlog-ci+f5479c1e+AR6gW0mycDtL17iM2uvQUThJsoiuSRirstEj9a5AdCCu
-  _APPLET_PUBLIC_KEY: transparency.dev-aw-applet-ci+3ff32e2c+AV1fgxtByjXuPjPfi0/7qTbEBlPGGCyxqr6ZlppoLOz3
-  _OS_PUBLIC_KEY1: transparency.dev-aw-os1-ci+7a0eaef3+AcsqvmrcKIbs21H2Bm2fWb6oFWn/9MmLGNc6NLJty2eQ
-  _OS_PUBLIC_KEY2: transparency.dev-aw-os2-ci+af8e4114+AbBJk5MgxRB+68KhGojhUdSt1ts5GAdRIT1Eq9zEkgQh
+  _ORIGIN: 'transparency.dev/armored-witness/firmware_transparency/ci/1'
+  _LOG_PUBLIC_KEY: 'transparency.dev-aw-ftlog-ci+f5479c1e+AR6gW0mycDtL17iM2uvQUThJsoiuSRirstEj9a5AdCCu'
+  _APPLET_PUBLIC_KEY: 'transparency.dev-aw-applet-ci+3ff32e2c+AV1fgxtByjXuPjPfi0/7qTbEBlPGGCyxqr6ZlppoLOz3'
+  _OS_PUBLIC_KEY1: 'transparency.dev-aw-os1-ci+7a0eaef3+AcsqvmrcKIbs21H2Bm2fWb6oFWn/9MmLGNc6NLJty2eQ'
+  _OS_PUBLIC_KEY2: 'transparency.dev-aw-os2-ci+af8e4114+AbBJk5MgxRB+68KhGojhUdSt1ts5GAdRIT1Eq9zEkgQh'
   _DEBUG: '1'
