--- a/release/cloudbuild_withsecure_signature.yaml
+++ b/release/cloudbuild_withsecure_signature.yaml
@@ -59,7 +59,7 @@ steps:
           "bucket": "${_LOG_NAME}",
           "kmsKeyName": "ft-log-ci",
           "kmsKeyRing": "firmware-release-ci",
-          "kmsKeyVersion": "${_KEY_VERSION}",
+          "kmsKeyVersion": ${_KEY_VERSION},
           "kmsKeyLocation": "global",
           "noteKeyName": "transparency.dev-aw-ftlog-ci",
           "checkpointCacheControl": "${_CHECKPOINT_CACHE}"
@@ -78,24 +78,28 @@ steps:
           "bucket": "${_LOG_NAME}",
           "kmsKeyName": "ft-log-ci",
           "kmsKeyRing": "firmware-release-ci",
-          "kmsKeyVersion": "${_KEY_VERSION}",
+          "kmsKeyVersion": ${_KEY_VERSION},
           "kmsKeyLocation": "global",
           "noteKeyName": "transparency.dev-aw-ftlog-ci",
           "checkpointCacheControl": "${_CHECKPOINT_CACHE}"
         }
 substitutions:
+  # Note that to be a valid CloudBuild config these MUST all be strings.
+  # Without explicit quotes, some things may be interpreted as other types since
+  # this is a YAML file, so to avoid future tears let's keep these all quoted.
+  #
   # TODO(jayhou): do not use CI bucket when we flip this trigger to prod.
-  _FIRMWARE_BUCKET: armored-witness-firmware-ci-1
-  _FIRMWARE_COMPONENT: trusted-os
-  _WITHSECURE_DIR: release/withsecure
+  _FIRMWARE_BUCKET: 'armored-witness-firmware-ci-1'
+  _FIRMWARE_COMPONENT: 'trusted-os'
+  _WITHSECURE_DIR: 'release/withsecure'
   # TODO(jayhou): remove this when we flip this trigger to prod.
-  _TEST_TAG_NAME: withsecure_v0.1.2
+  _TEST_TAG_NAME: 'withsecure_v0.1.2'
   # Log-related.
-  _ENTRIES_DIR: firmware-log-sequence
+  _ENTRIES_DIR: 'firmware-log-sequence'
   # TODO(jayhou): switch to prod origin.
-  _ORIGIN: transparency.dev/armored-witness/firmware_transparency/ci/1
+  _ORIGIN: 'transparency.dev/armored-witness/firmware_transparency/ci/1'
   # TODO(jayhou): do not use CI bucket when we flip this trigger to prod.
-  _LOG_NAME: armored-witness-firmware-log-ci-1
+  _LOG_NAME: 'armored-witness-firmware-log-ci-1'
   # This must correspond with the trailing number on the _FIRMWARE_BUCKET, _ORIGIN, _LOG_NAME values.
   _KEY_VERSION: '1'
   _CHECKPOINT_CACHE: 'public, max-age=30'
