Update dependabot weekly instead of daily

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
       patterns:
         - "*"
   schedule:
-    interval: daily
+    interval: weekly
   commit-message:
     prefix: ":seedling:"
     include: "scope"
@@ -21,7 +21,7 @@ updates:
       patterns:
         - "*"
   schedule:
-    interval: "daily"
+    interval: "weekly"
   commit-message:
     prefix: ":seedling:"
     include: "scope"
